--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <body>
 <header>
   <div class="left">
-    <div class="brand">📊 BTC Timeline</div>
+    <div class="brand">📊 BTC Timeline v6</div>
   </div>
   <div class="right" style="position:relative">
     <div class="theme blue active" data-t="blue" title="Blue"></div>
